--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
         <section id="perfil" class="section profile-section">
             <div class="container">
                 <div class="profile-photo">
-                    <img src="https://drive.google.com/file/d/1R90p_Pu_xHSC2dtGjH1qhOkdXTR66wJq/view" alt="Luis Felipe Nicolau - Foto de Perfil" />
+                    <img src="https://raw.githubusercontent.com/luisfnicolau/ceub/cca717d69eb406378b2b05dba1b8f02d52ea7299/PersonalPhoto.png" alt="Luis Felipe Nicolau - Foto de Perfil" />
                 </div>
                 <h1>Luis Felipe Moraes Nicolau</h1>
                 <p class="subtitle">Engenheiro de Software e Empreendedor</p>
